# fuzzfolio-autoresearch

./: .agentsecrets.example  .gitignore  .impeccable.md  M15  README.md  autoresearch.config.example.json  cgpt.txt  cheatsheet.md  cli.md  codexnotes.md  mapping.json  portable_profile_template.json  portfolio.account-presets.example.json  portfolio.config.example.json  portfolio.optimizer-suites.json  portfolio.research-suites.json  program.md  pyproject.toml  scratch_snapshot.txt
.cursor/plans/: playhand-atlas-perf-simplify.md
.github/workflows/: playhand-enqueue-tests.yml  temporary-playhand-enqueue-tests.yml
.playwright-cli/: page-2026-05-17T11-09-17-641Z.yml
autoresearch/: __init__.py  __main__.py  anchor_pair_atlas.py  archive_relocation.py  artifact_resolution.py  atlas_lab.py  branch_lifecycle.py  branch_mechanics.py  calendar_robustness.py  catalog_index.py  config.py  controller.py  controller_protocol.py  corpus_archive.py  corpus_lab_backtests.py  corpus_tools.py  dashboard.py  dashboard_viewer.py  discovery_cluster_atlas.py  discovery_pair_atlas.py  discovery_recipe_validation.py  durable_execution.py  evidence_artifacts.py  evidence_plan.py  execution_costs.py  fixed_cohort.py  forward_response_atlas.py  fuzzfolio.py  generation_archive.py  generation_cli.py  indicator_atlas.py  instrument_universe.py  lake_window.py  lake_window_client.py  ledger.py  legacy_fixed_cell.py  level_c.py  level_c_operator.py  level_c_protocol.py  level_c_workflow.py  (+39 more)
autoresearch/dashboard/: index.html  package-lock.json  package.json  vite.config.ts
autoresearch/dashboard_static/: app.js  index.html  (+1 more)
cgpt review/: latest-pro-after-finalized-priors.md  prompt.md
configs/: phase3-campaign-policy.json
data/: development_universe.json
rust/portfolio-optimizer/: Cargo.toml  README.md
rust/portfolio-optimizer/src/: lib.rs  main.rs
scripts/: build_playhand_prior_batch_report.py  cleanup-phase2-atlas-raw-roots.ps1  export_gemma_adapter_to_gguf.ps1  finish-level-c-d.ps1  finish-phase2-atlas-d.ps1  play-hand-lab-procman-env.ps1  preview_prompt_ownership_split.py  run_longcmp_queue.ps1  start-local-lab-ws-worker.ps1  start-loopback-lab-gateway.ps1
sweeps/: sweep-definition.json  sweep-results.json
tests/: test_anchor_pair_atlas.py  test_archive_relocation.py  test_artifact_resolution.py  test_atlas_lab.py  test_calendar_robustness.py  test_cleanup_incomplete_playhand_runs.py  test_controller_policy.py  test_corpus_lab_backtests.py  test_corpus_tools.py  test_dashboard_jobs.py  test_dashboard_viewer_catalog.py  test_discovery_cluster_atlas.py  test_discovery_pair_atlas.py  test_discovery_recipe_validation.py  test_durable_execution.py  test_evidence_artifacts.py  test_evidence_plan.py  test_exploration_review_pipeline.py  test_fixed_cohort.py  test_forward_response_atlas.py  test_full_backtest_retries.py  test_generation_archive.py  test_generation_cli.py  test_incremental_catalog_index.py  test_indicator_atlas.py  test_instrument_universe.py  test_lake_window_client.py  test_ledger.py  test_legacy_fixed_cell.py  test_level_c.py  test_level_c_operator.py  test_level_c_protocol.py  test_level_c_workflow.py  test_manager_actions.py  test_nested_evidence.py  test_nested_gateway.py  test_nested_pipeline.py  test_package_enqueue_bootstrap.py  test_phase2_atlas_capsule.py  test_phase3_authority.py  (+32 more)
tools/: entry_indicator_analysis.py  portfolio_optimizer_rust_parity.py  scorelab_v2_corpus_analysis.py
training/: README.md  benchmark_registry.json  env_check.py  eval_offline.py  merge_adapter.py  requirements-gemma.txt  train_lora.py
trainingdatapipeline/: __init__.py  build_corrective_batch.py  build_exploration_judgment_dataset.py  build_exploration_review_set.py  build_opening_contrast_dataset.py  build_opening_grounding_benchmark.py  build_opening_scaffold_slice.py  build_splits.py  build_targeted_slice.py  discover_runs.py  export_chat_format.py  export_summary_report.py  extract_raw_steps.py  label_deterministic.py  label_llm.py  manual_audit_sample.py  migrate_pathless_contract.py  normalize_state.py  offline_validator.py  replay_controller_state.py  replay_types.py  rules.py  schemas.py  score_examples.py  validators.py
z_docs/: ATLAS_RICHER_PRIORS_PLAN_2026-07-02.md  BACKTEST_HONESTY_AND_GOLD_EXPLORATION_NOTES_2026-04-23.md  CORPUS_CATCHUP_CLOUD_RUN_NOTES_2026-07-09.md  DEFERRED_ML_RESEARCH_DIRECTIONS.md  EPHEMERAL_WINDOWS_REPLAY_WORKER_SESSION_SPEC_2026-07-22.md  GEMMA_EXPLORER_TUNING_SPEC_V0.md  GEMMA_EXPLORER_TUNING_TODO.md  GOLD_STRATEGY_CODEX_AGENT_PROMPT.md  INDICATOR_ATLAS_PRIORS_PLAN_2026-05-21.md  INDICATOR_TRIGGER_BALANCE_TASKS_2026-04-23.md  MANAGER_CONTROLLER_ARCHITECTURE.md  PHASE3_RESEARCH_AND_OPERATIONS_MASTER_PLAN_2026-07-21.md  PLAYHAND_LAB_GATEWAY_DESIGN_SPEC_2026-06-19.md  PLAYHAND_MASSIVE_CAPACITY_STRESS_SPEC_2026-06-18.md  PLAYHAND_MASSIVE_V2_OPTIMIZATION_DECISION_FRAME_2026-06-24.md  PLAYHAND_MASSIVE_V2_VAST_THROUGHPUT_SNAPSHOT_2026-06-24.md  PORTFOLIO_CARDINALITY_AWARE_OPTIMIZER_SPEC_2026-06-28.md  PROMPT_HISTORY_SUMMARY_AUDIT.md  STRATEGY_CODEX_EXPLORER_AGENT_PROMPT.md  STRATEGY_LANGUAGE_AND_LEARNING_ARCHITECT_VISION.md  level-c-operator.md  phase2-atlas-capsule-operator.md  phase2-atlas-raw-cleanup-operator.md  phase3-playhand-authority-operator.md
(+190 files in other folders)
