[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous Fuzzfolio research loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "requests>=2.32.0",
    "rich>=13.9.4",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[project.scripts]
autoresearch = "autoresearch.__main__:main"

[tool.uv.sources]
torch = [
    { index = "pytorch-cu128" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
