[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous Fuzzfolio research loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.10.8",
    "requests>=2.32.0",
    "rich>=13.9.4",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
doctor = "autoresearch.__main__:main"
test-providers = "autoresearch.__main__:main"
play-hand = "autoresearch.__main__:main"
run = "autoresearch.__main__:main"
finalize-corpus = "autoresearch.__main__:main"
build-portfolio = "autoresearch.__main__:main"
dashboard = "autoresearch.__main__:main"
record-attempt = "autoresearch.__main__:main"
nuke-deep-caches = "autoresearch.__main__:main"
