[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous Fuzzfolio research loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.28.1",
    "matplotlib>=3.10.8",
    "pydantic==2.12.5",
    "requests>=2.32.0",
    "rich>=13.9.4",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]

[dependency-groups]
dev = ["pytest>=8.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
doctor = "autoresearch.__main__:main"
test-providers = "autoresearch.__main__:main"
play-hand = "autoresearch.__main__:main"
play-hand-massive = "autoresearch.__main__:main"
play-hand-lab = "autoresearch.__main__:main"
play-hand-lab-gateway = "autoresearch.__main__:main"
play-hand-lab-http-sim = "autoresearch.__main__:main"
play-hand-lab-sim = "autoresearch.__main__:main"
play-hand-lab-ws-sim = "autoresearch.__main__:main"
play-hand-massive-v2 = "autoresearch.__main__:main"
play-hand-massive-v2-gateway = "autoresearch.__main__:main"
play-hand-massive-v2-http-sim = "autoresearch.__main__:main"
play-hand-massive-v2-sim = "autoresearch.__main__:main"
play-hand-massive-v2-ws-sim = "autoresearch.__main__:main"
atlas-lab = "autoresearch.__main__:main"
build-indicator-atlas = "autoresearch.__main__:main"
build-signal-atlas = "autoresearch.__main__:main"
build-forward-response-atlas = "autoresearch.__main__:main"
build-anchor-pair-atlas = "autoresearch.__main__:main"
run-anchor-pair-probes = "autoresearch.__main__:main"
build-anchor-pair-timing-atlas = "autoresearch.__main__:main"
run-anchor-pair-timing-probes = "autoresearch.__main__:main"
build-playhand-outcome-priors = "autoresearch.__main__:main"
playhand-efficiency-report = "autoresearch.__main__:main"
build-recipe-priors = "autoresearch.__main__:main"
build-discovery-pair-atlas = "autoresearch.__main__:main"
run-discovery-pair-probes = "autoresearch.__main__:main"
build-discovery-cluster-atlas = "autoresearch.__main__:main"
build-discovery-recipe-validation-atlas = "autoresearch.__main__:main"
build-discovery-recipe-scrutiny-atlas = "autoresearch.__main__:main"
run-discovery-recipe-validation-probes = "autoresearch.__main__:main"
run = "autoresearch.__main__:main"
finalize-corpus = "autoresearch.__main__:main"
cleanup-incomplete-playhand-runs = "autoresearch.__main__:main"
cleanup-playhand-lab-raw-artifacts = "autoresearch.__main__:main"
compact-runs-json = "autoresearch.__main__:main"
build-portfolio = "autoresearch.__main__:main"
optimize-portfolio = "autoresearch.__main__:main"
export-portfolio-bundle = "autoresearch.__main__:main"
build-portfolio-risk-sizing = "autoresearch.__main__:main"
render-portfolio-profile-drops = "autoresearch.__main__:main"
dashboard = "autoresearch.__main__:main"
record-attempt = "autoresearch.__main__:main"
nuke-deep-caches = "autoresearch.__main__:main"
