[package]
name = "portfolio-optimizer-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "portfolio_optimizer_rs"
path = "src/lib.rs"

[[bin]]
name = "portfolio-optimizer-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
