[package]
name = "portfolio-optimizer-rs"
version = "0.1.0"
edition = "2024"

[lib]
name = "portfolio_optimizer_rs"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "portfolio-optimizer-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
pyo3 = { version = "0.29.0", optional = true, features = ["extension-module", "abi3-py310"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = []
python-extension = ["dep:pyo3"]
